Iniciando um projeto no github

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -11,7 +11,7 @@
         <h3>Escolha a melhor opção para você</h3>
         <h1></h1>
         <ion-button href="beginner" expand="full" fill="outline">Começar do início</ion-button>
-        <ion-button expand="full" fill="outline">Fazer teste de nivelamento</ion-button>
+        <ion-button href="teste-nivelamento" expand="full" fill="outline">Fazer teste de nivelamento</ion-button>
     </div>
 
     <div class="bottom">
