--- a/src/app/pages/pre-intermediate/pre-intermediate.page.html
+++ b/src/app/pages/pre-intermediate/pre-intermediate.page.html
@@ -16,7 +16,7 @@
         </ion-header>
         <ion-content>
             <a href="beginner" class="btn btn-primary btn-lg btn-block" role="button" aria-disabled="false">Beginner level</a>
-            <a href="#" class="btn btn-primary btn-lg disabled btn-lg btn-block" role="button" aria-disabled="true">Pre-intermediate level</a>
+            <a href="pre-intermediate" class="btn btn-primary btn-lg btn-block" role="button" aria-disabled="true">Pre-intermediate level</a>
             <a href="#" class="btn btn-primary btn-lg disabled btn-lg btn-block" role="button" aria-disabled="true">Intermediate level</a>
             <a href="#" class="btn btn-primary btn-lg disabled btn-lg btn-block" role="button" aria-disabled="true">Upper-intermediate level</a>
         </ion-content>
@@ -32,51 +32,37 @@
     <ion-content class="background">
 
         <div class="top">
-            <h4>Beginner</h4>
+            <h4>Pre-intermediate</h4>
             <h4>Level</h4>
 
         </div>
 
         <div class="button">
-            <ion-button href="topics-grammar1" color="light">
+            <ion-button href="grammar-list" color="light">
                 <div class="icon">
-                    <ion-icon name="albums" size="large"></ion-icon> <br> Grammar
+                    <ion-icon name="albums" size="large"></ion-icon> <br> Grammar II
                 </div>
             </ion-button>
             <ion-button href="topics-vocabulary1" color="light">
                 <div class="icon">
-                    <ion-icon name="logo-vimeo" size="large"></ion-icon> <br> Vocabulary
+                    <ion-icon name="logo-vimeo" size="large"></ion-icon> <br> Vocabulary II
                 </div>
             </ion-button>
             <ion-button href="reading" color="light">
                 <div class="icon">
-                    <ion-icon name="paper" size="large"></ion-icon> <br> Reading
+                    <ion-icon name="paper" size="large"></ion-icon> <br> Reading II
                 </div>
             </ion-button>
             <ion-button href="topics-grammar1" color="light">
                 <div class="icon">
-                    <ion-icon name="volume-high" size="large"></ion-icon> <br> Listening
+                    <ion-icon name="volume-high" size="large"></ion-icon> <br> Listening II
                 </div>
             </ion-button>
             <ion-button href="testess" color="light">
                 <div class="icon">
-                    <ion-icon name="clipboard" size="large"></ion-icon> <br> Tests
+                    <ion-icon name="clipboard" size="large"></ion-icon> <br> Tests II
                 </div>
             </ion-button>
-
-
-
-            <!--
-               <ion-button href="topics-grammar1" expand="full" fill="outline">Grammar</ion-button>
-            <ion-button href="topics-vocabulary1" expand="full" fill="outline">Vocabulary</ion-button>
-            <ion-button href="reading" expand="full" fill="outline">Reading/Listening</ion-button>
-            <ion-button expand="full" fill="outline">Written</ion-button>
-            <ion-button href="testess" expand="full" fill="outline">Tests</ion-button>
--->
         </div>
-
     </ion-content>
-
-
-
 </ion-app>
