--- a/src/app/pages/testess/testess.page.html
+++ b/src/app/pages/testess/testess.page.html
@@ -12,7 +12,9 @@
 
         <ion-card href="teste1">
             <ion-card-header>
-                <ion-card-title>Practise test 1</ion-card-title>
+                <ion-card-title>Practise test 1
+
+                </ion-card-title>
             </ion-card-header>
 
         </ion-card>
@@ -46,7 +48,7 @@
             </ion-card-header>
 
         </ion-card>
-        <ion-card href="text7">
+        <ion-card href="testvoc">
             <ion-card-header>
                 <ion-card-title>Vocabulary test 1</ion-card-title>
             </ion-card-header>
