--- a/src/app/pages/tests/testvoc/testvoc.page.scss
+++ b/src/app/pages/tests/testvoc/testvoc.page.scss
@@ -3,6 +3,10 @@ ion-toolbar {
     text-align: center;
 }
 
+ion-title {
+    margin-left: -13%;
+}
+
 ion-content {
     h5 {
         margin-top: 5%;
