--- a/src/app/pages/topicsVocabulary1/adjective/adjective.page.scss
+++ b/src/app/pages/topicsVocabulary1/adjective/adjective.page.scss
@@ -3,8 +3,9 @@ ion-toolbar {
 }
 
 ion-title {
-    margin-left: 30%;
+    margin-left: 23%;
     color: #ffffff;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 ion-content {
@@ -40,12 +41,13 @@ ion-card {
 }
 
 h4 {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Luminari, fantasy';
     color: #775350;
     margin-bottom: 60px;
 }
 
 h3 {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: monospace;
     color: #775350;
+    font-weight: bold;
 }
